--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<h2>오시는 길</h2>
 								<p>경상남도 창원시 진해구 이동로 54<br /></p>
 							</header>
-							<div id="map" style="width:60%;height:400px;"></div>
+							<div id="map" style="margin:auto;width:60%;height:400px;"></div>
 						</div>
 					</section>
 
