--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 // 마커가 지도 위에 표시되도록 설정합니다
                 marker.setMap(map);
 
-                var iwContent = '<div style="padding:5px;">Hello World! <br><a href="http://map.daum.net/link/map/벚꽃향기,35.151047, 128.697655" ' +
+                var iwContent = '<div style="padding:5px;">벚꽃향기<br><a href="http://map.daum.net/link/map/벚꽃향기,35.151047, 128.697655" ' +
 					'style="color:blue" target="_blank">큰지도보기</a> <a href="http://map.daum.net/link/to/벚꽃향기,35.151047, 128.697655" ' +
 					'style="color:blue" target="_blank">길찾기</a></div>', // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다
                     iwPosition = new daum.maps.LatLng(35.151047, 128.697655); //인포윈도우 표시 위치입니다
