--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>벚꽃향기</h2>
-							<p>Coffee & Beer<br />
-							경상남도 창원시<br />
-							진해구 이동로 54<br />
-								055-547-1146
-							</p>
+							<p>Coffee & Beer<br /></p>
+							<p>경상남도 창원시<br />
+							진해구 이동로 54<br /></p>
+							<p>	055-547-1146</p>
 
 						</div>
 						<a href="#two" class="more scrolly">더 보기</a>
